# ai-guardrails

./: .gitignore  Makefile  config.yaml  pyproject.toml
src/: config.py  main.py
src/clients/: nats_client.py
src/guardrails/: input_guardrails.py  output_guardrails.py
src/services/: input_guardrail_service.py  orchestrator_service.py  output_guardrail_service.py
src/utils/: async_utils.py  logger.py
